--- a/hw4.Rmd
+++ b/hw4.Rmd
@@ -40,7 +40,7 @@ GIIcols <- GII %>%
   slice(1:189,) %>%
   select(country, x2019, x2010) %>% 
   mutate(difference= x2019-x2010) %>% 
-  mutate(iso_code=countrycode(GIIcols$country, origin='country.name', destination = 'iso2c'))
+  mutate(iso_code=countrycode(country, origin='country.name', destination = 'iso2c'))
 ```
 
 ##join csv. and shp.
